name:                bot
version:             0.1.0.0
synopsis:            a simple bot
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Robot
build-type:          Simple
cabal-version:       >=1.10

executable bot
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7,
                       happstack-server >=7.3 && <7.4,
                       filepath,
                       process >= 1.2,
  default-language:    Haskell2010